# wasm-examples

./: README.md  justfile
00-add/: Cargo.toml  README.md  justfile  test.js
01-add/: test.js
01-pythag/: Cargo.toml  justfile  test.js
01-pythag/src/: lib.rs
01-square/: Cargo.toml  test.js
01-square/src/: lib.rs
02-fibonacci/: Cargo.toml  justfile  test.js
02-fibonacci/src/: lib.rs
03-reverse/: .gitignore  Cargo.toml  justfile  test.js
03-reverse/.tiny/: Cargo.toml  lib.rs
03-reverse/src/: lib.rs
04-time/: Cargo.toml  README.md  justfile  test.js
04-time/src/: lib.rs
05-time2/: README.md  justfile
05-time2/src/: lib.rs
06-dom/: Cargo.toml  index.html  justfile
06-dom/src/: lib.rs
07-website/: Cargo.toml  README.md  justfile
07-website/src/: cel.pest  lib.rs  location.rs  main.rs  model.rs  parser.rs  stack.rs
07-website/static/: index.html
08-compile-sources/: README.md
08-compile-sources/golang/: .gitignore  hello.go  justfile
08-emscripten/: hello.c  justfile
09-embedding/golang/: main.go  my_lib.wasm
09-embedding/my_lib/: Cargo.toml
09-embedding/python/: main.py
09-embedding/rust/: .gitignore  Cargo.toml
09-golang/: justfile
10-gas/: .gitignore  Cargo.toml  fibonacci.wasm  fibonacci_bg.wasm
10-gas/src/: .main.rs.swp  main.rs
11-authz/: Cargo.toml  README.md
11-authz/policy/: Cargo.toml
11-authz/policy/src/: lib.rs
12-parser/: Cargo.toml  justfile  test.js
13-protos/: .gitignore  Cargo.toml  README.md  api.proto  build.rs  justfile
13-protos/policy/: Cargo.toml  build.rs
13-protos/policy/src/: lib.rs
(+10 files in other folders)
