[package]
name = "policy"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[profile.release]
opt-level = "s"
lto = true
