[package]
name = "policy"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
prost = "0.7"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[build-dependencies]
anyhow = "1.0"
prost-build = "0.7"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
